# car-plate-number-recognition

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: config.yaml
src/: cli.py  legacy_main.py
src/analytics/: dashboard.py
src/api/: main.py
src/core/: config.py  database.py  logging_config.py
src/models/: detector.py  ocr.py  tracker.py
src/pipeline/: alpr_pipeline.py
src/utils/: mlflow_tracker.py
tests/: test_config.py
